# employee_management_system_rust_rusqlite

./: Cargo.toml  README.md  employees.db
src/: config.rs  db.rs  employee.rs  main.rs  ui.rs
