[package]
name = "my-project"
version = "0.1.0"
authors = ["runner"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.6"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"

[dependencies.rusqlite]
version = "0.27.0"
features = ["bundled"]